fix: wrong width for no-sidebar sites when disable sidebar

--- a/src/scss/kr-core.scss
+++ b/src/scss/kr-core.scss
@@ -1512,7 +1512,8 @@ ul.kratos-page-meta {
     }
   }
 }
-.col-md-8 {
+
+.kr-main-col {
   width: 100%;
 }
 
